--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format": "npx prettier . --write",
     "test": "tsx ./quartz/util/path.test.ts && tsx ./quartz/depgraph.test.ts",
     "profile": "0x -D prof ./quartz/bootstrap-cli.mjs build --concurrency=1",
-    "sync": "npx quartz sync -d \"D&D - Il furto dei dragoni\" --no-pull",
+    "sync": "npx quartz sync -d \"D&D - Il furto dei dragoni\"",
     "build": "npx quartz build -d \"D&D - Il furto dei dragoni\"",
     "serve": "npx quartz build -d=\"D&D - Il furto dei dragoni\" --serve"
   },
