--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,7 +48,7 @@ jobs:
         run: npx quartz build --bundleInfo
 
   publish-tag:
-    if: ${{ github.repository == 'marcoFuschini/watermeep-il-furto-dei-dragoni' && github.ref == 'refs/heads/main' }}
+    if: ${{ github.repository == 'marcoFuschini/watermeep-il-furto-dei-dragoni' && github.ref == 'refs/heads/test-build' }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
